# my-openenv

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app_ui.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh
env/customer_support_env/: Dockerfile  demo.py  inference.py  openenv.yaml
server/: app.py
src/: environment.py
